force-app/main/default/objects/Regulatory_Actions__c/Regulatory_Actions__c.object-meta.xml
<CustomObject>
    <label>Regulatory Actions</label>
    <nameField>
        <label>Regulatory Action</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Regulatory Actions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>