force-app/main/default/objects/Regulatory_Actions__c/fields/Date_of_Action__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Action__c</fullName>
    <label>Date of Action</label>
    <type>Date</type>
</CustomField>