force-app/main/default/objects/Regulatory_Actions__c/fields/Regulation_Actions__c.field-meta.xml
<CustomField>
    <fullName>Regulation_Actions__c</fullName>
    <label>Regulation Actions</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1. Bill/Law Submission</fullName>
            </value>
            <value>
                <fullName>2. Bill/ Law Voted On and Passed</fullName>
            </value>
            <value>
                <fullName>3. Bill Signed Into Law and text of Signed Law</fullName>
            </value>
            <value>
                <fullName>4. Guidance from Regulator</fullName>
            </value>
            <value>
                <fullName>5. Quote from Regulator</fullName>
            </value>
            <value>
                <fullName>6. Panel Discussion From Regulator</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>