force-app/main/default/objects/Regulatory_Actions__c/fields/Regulator__c.field-meta.xml
<CustomField>
    <fullName>Regulator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Regulator</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Regulatory Actions</relationshipLabel>
    <relationshipName>Regulatory_Actions</relationshipName>
    <type>Lookup</type>
</CustomField>