force-app/main/default/objects/Regulatory_Actions__c/fields/Regulatory_Action_Summary__c.field-meta.xml
<CustomField>
    <fullName>Regulatory_Action_Summary__c</fullName>
    <label>Regulatory Action Summary</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>